--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -23,13 +23,13 @@ AppBundle\Entity\SubFamily:
 
 AppBundle\Entity\User:
     user_{1..10}:
-        email: weaverryan+<current()>@gmail.com
-        plainPassword: iliketurtles
+        email: john.kuae+<current()>@gmail.com
+        plainPassword: kuae
         roles: ['ROLE_ADMIN']
         avatarUri: <imageUrl(100, 100, 'abstract')>
     user.aquanaut_{1..10}:
         email: aquanaut<current()>@example.org
-        plainPassword: aquanote
+        plainPassword: kuae
         isScientist: true
         firstName: <firstName()>
         lastName: <lastName()>
