--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-markdown-bundle": "^1.4",
         "doctrine/doctrine-migrations-bundle": "^1.1",
-        "stof/doctrine-extensions-bundle": "^1.2"
+        "stof/doctrine-extensions-bundle": "^1.2",
+        "javiereguiluz/easyadmin-bundle": "^1.17"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -62,9 +63,6 @@
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        },
-        "symfony": {
-            "allow-contrib": "true"
         }
     }
 }
