--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,91 +1,106 @@
 imports:
-    - { resource: parameters.yml }
-    - { resource: security.yml }
-    - { resource: services.yml }
+  - { resource: parameters.yml }
+  - { resource: security.yml }
+  - { resource: services.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
-    cache_type: file_system
+  locale: en
+  cache_type: file_system
 
 framework:
-    #esi:             ~
-    translator:      { fallbacks: ["%locale%"] }
-    secret:          "%secret%"
-    router:
-        resource: "%kernel.root_dir%/config/routing.yml"
-        strict_requirements: ~
-    form:            ~
-    csrf_protection: ~
-    validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
-    templating:
-        engines: ['twig']
-        #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
-    trusted_hosts:   ~
-    session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
-        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
-    fragments:       ~
-    http_method_override: true
-    assets: ~
+  #esi:             ~
+  translator:      { fallbacks: ["%locale%"] }
+  secret:          "%secret%"
+  router:
+    resource: "%kernel.root_dir%/config/routing.yml"
+    strict_requirements: ~
+  form:            ~
+  csrf_protection: ~
+  validation:      { enable_annotations: true }
+  #serializer:      { enable_annotations: true }
+  templating:
+    engines: ['twig']
+    #assets_version: SomeVersionScheme
+  default_locale:  "%locale%"
+  trusted_hosts:   ~
+  session:
+    # handler_id set to null will use default session handler from php.ini
+    handler_id:  ~
+    save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+  fragments:       ~
+  http_method_override: true
+  assets: ~
 
 # Twig Configuration
 twig:
-    debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
-    number_format:
-        thousands_separator: ','
-    form_themes:
-        - bootstrap_3_layout.html.twig
-        - _formTheme.html.twig
+  debug:            "%kernel.debug%"
+  strict_variables: "%kernel.debug%"
+  number_format:
+    thousands_separator: ','
+  form_themes:
+    - bootstrap_3_layout.html.twig
+    - _formTheme.html.twig
 
 # Doctrine Configuration
 doctrine:
-    dbal:
-        driver:   pdo_mysql
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
-        charset:  UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #     path:     "%database_path%"
+  dbal:
+    driver:   pdo_mysql
+    host:     "%database_host%"
+    port:     "%database_port%"
+    dbname:   "%database_name%"
+    user:     "%database_user%"
+    password: "%database_password%"
+    charset:  UTF8
+    # if using pdo_sqlite as your database driver:
+    #   1. add the path in parameters.yml
+    #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
+    #   2. Uncomment database_path in parameters.yml.dist
+    #   3. Uncomment next line:
+    #     path:     "%database_path%"
 
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+  orm:
+    auto_generate_proxy_classes: "%kernel.debug%"
+    naming_strategy: doctrine.orm.naming_strategy.underscore
+    auto_mapping: true
 
 doctrine_cache:
-    providers:
-        my_markdown_cache:
-            type: %cache_type%
-            file_system:
-                directory: %kernel.cache_dir%/markdown_cache
+  providers:
+    my_markdown_cache:
+      type: %cache_type%
+      file_system:
+        directory: %kernel.cache_dir%/markdown_cache
 
 stof_doctrine_extensions:
-    default_locale: en_US
-    orm:
-        default:
-            sluggable: true
+  default_locale: en_US
+  orm:
+    default:
+      sluggable: true
 
 easy_admin:
-    site_name: 'Aqua<i>Note</i>'
-    design:
-        brand_color: '#81b9ba'
-        assets:
-            css: ['css/custom_backend.css']
-    entities:
-        - AppBundle\Entity\Genus
-        - AppBundle\Entity\GenusNote
-        - AppBundle\Entity\SubFamily
-        - AppBundle\Entity\User
+  site_name: 'Aqua<i>Note</i>'
+  design:
+    brand_color: '#81b9ba'
+    assets:
+      css: ['css/custom_backend.css']
+  list:
+    title: 'List of %%entity_label%%'
+  entities:
+    Genus:
+      class: AppBundle\Entity\Genus
+      label: Genuses
+      help: Genuses are not covered under warranty!
+      list:
+        help: Do not feed!
+      search:
+        help: null
+    GenusNote:
+      class: AppBundle\Entity\GenusNote
+      label: Genus Notes
+      list:
+        title: List of notes
+    SubFamily:
+      class: AppBundle\Entity\SubFamily
+    User:
+      class: AppBundle\Entity\User
